--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,11 +2,14 @@
     "env": {
         "commonjs": true,
         "es6": true,
-        "node": true
+        "node": true,
+        "jest": true
     },
     "extends": [
-        "airbnb-base"
+        "airbnb-base",
+        "plugin:jest/recommended"
     ],
+    "plugins": ["jest"],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
@@ -15,5 +18,8 @@
         "ecmaVersion": 2018
     },
     "rules": {
-    }
+    },
+    "ignorePatterns": [
+      "*.config.js"
+    ]
 }
