--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "cross-env NODE_ENV='development' nodemon app.js",
     "preversion": "",
     "version": "node ./scripts/version.js",
-    "postversion": ""
+    "postversion": "",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
